# persona

./: .gitignore  Cargo.toml  LLM.md  README.md  package.json  pyproject.toml  test_loader.py  validate_integration.sh  validation-report.json
examples/: usage_examples.md
personalities/: __init__.py  ada_lovelace.md  all_personalities.json  great-thinkers.json  master-thinkers-300plus.json  master-thinkers.json  mega-personalities.json  modern-influencers.json  personality_loader.py  personality_loader.rs  personality_loader.ts  personas.json  rebels-revolutionaries.json  ritchie_thompson.md  zeekay.json
profiles/: 10x.json  PSYCHOMETRIC_ANALYSIS_REPORT.md  README.md  abai_qunanbaiuly.json  abbas_kiarostami.json  abdus_salam.json  abraham.json  ada.json  adam_smith.json  adi_shankara.json  adonis.json  adorno.json  agostinho_neto.json  aime_cesaire.json  al_ghazali.json  al_mutanabbi.json  alan_watts.json  albert_wendt.json  aldo_rossi.json  aldous_huxley.json  alejo_carpentier.json  alexander.json  alexis_de_tocqueville.json  ali_wong.json  alisher_navoi.json  allan_bloom.json  alvar_aalto.json  amelia_earhart.json  amos_oz.json  amy_poehler.json  anaxagoras.json  anaximander.json  andrzej_wajda.json  angelou.json  angelou_behavioral.json  anna_akhmatova.json  anne_sexton.json  anselm_canterbury.json  antoni_gaudi.json  antonin_dvorak.json  (+667 more)
schemas/: persona_schema.yaml  personality.schema.json
scripts/: add-personality.js  build.js  enhance-scientists.js  enhance_all_personalities.py  migrate.js  parallel-validate.js  split-personalities.js  validate.js
(+4 files in other folders)
