[package]
name = "hanzo-persona"
version = "1.0.0"
edition = "2021"
authors = ["Hanzo AI"]
description = "Unified programmer personality profiles for Hanzo ecosystem"
repository = "https://github.com/hanzoai/persona"
license = "MIT"
keywords = ["hanzo", "personality", "personas", "programmer", "ai"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.19"

[dev-dependencies]
anyhow = "1.0"

[lib]
name = "hanzo_persona"
path = "personalities/personality_loader.rs"

[[bin]]
name = "persona-test"
path = "bin/test.rs"
required-features = []