[project]
name = "hanzo-persona"
version = "1.0.0"
description = "Unified programmer personality profiles for Hanzo ecosystem"
authors = [{ name = "Hanzo AI" }]
readme = "README.md"
requires-python = ">=3.8"
keywords = ["hanzo", "personality", "personas", "programmer", "ai"]
license = { text = "MIT" }

[project.urls]
Homepage = "https://github.com/hanzoai/persona"
Repository = "https://github.com/hanzoai/persona.git"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["personalities"]

[tool.setuptools.package-data]
personalities = ["*.json", "*.yaml", "*.md"]